<resources>
    <string name="app_name">PokemonApp</string>
    <string name="pokemon">Pokemon</string>
    <string name="hashtag">#%s</string>
    <string name="caught_pokemon">Catch Pokemon</string>
    <string name="favorite_empty">You don\'t have any pokemon</string>
    <string name="caught">You Caught %s!</string>
    <string name="no_catch">Oops, you can\'t catch %s</string>
    <string name="catch_probability">Catch Probability</string>
    <string name="give_name">Name your Pokemon</string>
    <string name="catch_again">Catch Again</string>
    <string name="submit">Submit</string>

    <!-- Info -->
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="abilities">Abilities</string>
    <string name="color">Color</string>
    <string name="breeding">Breeding</string>
    <string name="egg_group">Egg Groups</string>
    <string name="egg_cycle">Egg Cycle</string>
    <string name="habitat">Habitat</string>
    <string name="heightCm">%s cm</string>
    <string name="weightKg">%s kg</string>

    <!-- Stat -->
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Sp Attack</string>
    <string name="special_defense">Sp Defense</string>
    <string name="speed">Speed</string>

    <string-array name="infoTitle">
        <item>Base Info</item>
        <item>Base Stats</item>
    </string-array>
</resources>