<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvColorTitle"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/color"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/dove_gray"
        app:layout_constraintEnd_toStartOf="@id/glInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeightTitle"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/height"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/dove_gray"
        app:layout_constraintEnd_toStartOf="@id/glInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvColorTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWeightTitle"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/dove_gray"
        app:layout_constraintEnd_toStartOf="@id/glInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeightTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAbilitiesTitle"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/abilities"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/dove_gray"
        app:layout_constraintEnd_toStartOf="@id/glInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWeightTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBreeding"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/breeding"
        android:textAppearance="@style/TextAppearance.OpenSans.Bold.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/glInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAbilities" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEggGroupTitle"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/egg_group"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/dove_gray"
        app:layout_constraintEnd_toStartOf="@id/glInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBreeding" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEggCycleTitle"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/egg_cycle"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/dove_gray"
        app:layout_constraintEnd_toStartOf="@id/glInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEggGroupTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHabitatTitle"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/habitat"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/dove_gray"
        app:layout_constraintEnd_toStartOf="@id/glInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEggCycleTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvColor"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeight"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glInfo"
        app:layout_constraintTop_toBottomOf="@id/tvColor" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWeight"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glInfo"
        app:layout_constraintTop_toBottomOf="@id/tvHeight" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAbilities"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glInfo"
        app:layout_constraintTop_toBottomOf="@id/tvWeight" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEggGroup"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glInfo"
        app:layout_constraintTop_toBottomOf="@id/tvBreeding" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEggCycle"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glInfo"
        app:layout_constraintTop_toBottomOf="@id/tvEggGroup" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHabitat"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAppearance="@style/TextAppearance.OpenSans.Regular.Caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glInfo"
        app:layout_constraintTop_toBottomOf="@id/tvEggCycle" />

</androidx.constraintlayout.widget.ConstraintLayout>